namespace Barcelleste
{
    public class Constants
    {
        public const string ANIMATOR_PARAMETER_BOOL_IS_MOVING = "Is Moving";
        public const string ANIMATOR_PARAMETER_TRIGGER_JUMPED = "Jumped";
        public const string ANIMATOR_PARAMETER_BOOL_IS_FALLING = "Is Falling";
        public const string ANIMATOR_PARAMETER_TRIGGER_LANDED = "Landed";
    }
}
